@@ -29,6 +29,8 @@
  * @requires vm.cds
  * @library /test/lib
  * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @compile test-classes/RewriteBytecodesInline.java test-classes/Util.java test-classes/Point.java test-classes/WithInlinedField.java RewriteBytecodesInlineTest.java
  * @build jdk.test.whitebox.WhiteBox
  * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
@@ -48,7 +50,8 @@ public class RewriteBytecodesInlineTest {
 
     TestCommon.dump(appJar, TestCommon.list("RewriteBytecodesInline", "Point", "WithInlinedField"),
                     // command-line arguments ...
-                    use_whitebox_jar);
+                    use_whitebox_jar,
+                    "--enable-preview");
 
     OutputAnalyzer output = TestCommon.exec(appJar,
                     // command-line arguments ...
