@@ -28,9 +28,11 @@
  * @requires vm.cds
  * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds /test/hotspot/jtreg/runtime/cds/appcds/test-classes
  * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @compile ../test-classes/HelloInlineClassApp.java
  * @build jdk.test.whitebox.WhiteBox
- * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar hello_inline.jar HelloInlineClassApp HelloInlineClassApp$Point HelloInlineClassApp$Rectangle
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar hello_inline.jar HelloInlineClassApp HelloInlineClassApp$Point HelloInlineClassApp$Rectangle HelloInlineClassApp$ValueRecord
  * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox jdk.test.whitebox.WhiteBox$WhiteBoxPermission
  * @run main/othervm -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Xbootclasspath/a:. HelloDynamicInlineClass
  */
@@ -39,21 +41,13 @@ import jdk.test.lib.helpers.ClassFileInstaller;
 
 public class HelloDynamicInlineClass extends DynamicArchiveTestBase {
     public static void main(String[] args) throws Exception {
-        runTest(HelloDynamicInlineClass::testDefaultBase);
-        runTest(HelloDynamicInlineClass::testCustomBase);
+        runTest(HelloDynamicInlineClass::test);
     }
 
-    // (1) Test with default base archive + top archive
-    static void testDefaultBase() throws Exception {
+    static void test() throws Exception {
         String topArchiveName = getNewArchiveName("top");
-        doTest(null, topArchiveName);
-    }
-
-    // (2) Test with custom base archive + top archive
-    static void testCustomBase() throws Exception {
-        String topArchiveName = getNewArchiveName("top2");
         String baseArchiveName = getNewArchiveName("base");
-        TestCommon.dumpBaseArchive(baseArchiveName);
+        TestCommon.dumpBaseArchive(baseArchiveName, "--enable-preview", "-Xlog:cds");
         doTest(baseArchiveName, topArchiveName);
     }
 
